--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="header-left">
                         <h2>Influencer products</h2>
                     </div>
-                    <div class="header-right">
+                    <div class="header-right hide">
                         <a href="">Home</a>
                         <a href="">Product</a>
                         <a href="">Sign up</a>
@@ -47,7 +47,7 @@
                     </div>
 
                 </div>
-                <section class="third">
+                <section class="third hide">
                     <div class="third-section-logo">
                         <img src="/logos/Alibaba.svg" alt="">
                         <img src="/logos/Amazon.svg" alt="">
@@ -165,7 +165,7 @@
 
             </section>
             <footer class="las-section">
-                <div class="footer-description">
+                <div class="footer-descripntion">
                     <h2 class="footer-title">Influencer products</h2>
                     <p class="copyright">Copyright © 2020  influencer products</p>
                     <p class="footerl">All rights reserved</p>
